[project]
name = "movie"
version = "0.1.0"
description = "영화진흥위원회 영화순위 데이터 처리"
authors = [
    {name = "lsiwh37249", email = "lsiwh37249@gmail.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[project.scripts]
mov-ping = "movie.cli:ping"

[project.urls]
Homepage = "https://github.com/lsiwh37249/movie"
Issues = "https://github.com/lsiwh37249/movie/issues"
